src/index.css
@import 'tailwindcss';
@plugin "daisyui" {
  themes:
    light --default,
    dark;
}

:root {
  font-family: 'Noto Sans', sans-serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
  font-variation-settings: 'wdth' 100;
  margin: 0;
  padding: 0;
  min-width: 0;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  font-smooth: always;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

#root {
  height: 100lvh;
  width: 100lvw;
}

* {
  min-width: 0;
  min-height: 0;
  image-rendering: crisp-edges;
}

